# VocaPort

./: .gitignore  AGENTS.en.md  AGENTS.md  AGENTS.zh.md  CLA.en.md  CLA.zh.md  Cargo.toml  README.en.md  README.md  README.zh.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: pull_request_template.md
.github/workflows/: deploy-downloads-site.yml  publish-android-release.yml
apps/desktop-mobile/: index.html  package.json
apps/desktop-mobile/src/: App.test.tsx  App.tsx  runtime.ts
apps/desktop-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-mobile/src-tauri/capabilities/: default.json
apps/desktop-mobile/src-tauri/icons/: icon.icns
apps/desktop-mobile/src-tauri/src/: lib.rs  main.rs  storage.rs
apps/desktop-mobile/src-tauri/tests/: health_ping.rs  storage.rs
apps/downloads/: index.html  package.json
apps/downloads/public/: releases.json
apps/downloads/src/: App.test.tsx  App.tsx  catalog.test.ts  catalog.ts  fixtures.ts  i18n.test.ts  i18n.ts  index.css  index.css.test.ts  main.tsx  theme.test.ts  theme.ts  types.ts
apps/web/: index.html  package.json  tailwind.config.cjs  vite.config.ts
apps/web/src/: App.interaction.test.tsx  App.test.tsx  App.tsx  runtime.test.ts  runtime.ts  storage.test.ts  storage.ts  wasm.d.ts
crates/core_app_service/: Cargo.toml
crates/core_app_service/src/: lib.rs
crates/core_app_service/tests/: library_flow.rs  phase_one_flow.rs
crates/core_bridge_contract/: Cargo.toml
crates/core_bridge_contract/src/: lib.rs
crates/core_bridge_contract/tests/: session_contract.rs
crates/core_domain/: Cargo.toml
crates/core_domain/src/: lib.rs
crates/core_events/: Cargo.toml
crates/core_events/src/: lib.rs
crates/core_module_registry/: Cargo.toml
crates/core_module_registry/src/: lib.rs
crates/core_module_registry/tests/: manifest_validation.rs
crates/core_permission/: Cargo.toml
crates/core_permission/src/: lib.rs
crates/core_signature/: Cargo.toml
crates/core_signature/src/: lib.rs
crates/core_storage_contract/: Cargo.toml
crates/core_storage_contract/src/: lib.rs
crates/core_web_wasm/: Cargo.toml
crates/core_web_wasm/src/: lib.rs
crates/modules/importer_apkg/: Cargo.toml
crates/modules/importer_apkg/src/: lib.rs
crates/modules/importer_apkg/tests/: preview_import.rs
crates/modules/quiz_mcq/: Cargo.toml
fixtures/anki/: basic-vocab.apkg
scripts/: build-releases-manifest.mjs  build-web-wasm.sh  make-basic-apkg-fixture.sh  prepare-release-assets.mjs  prepare-release-assets.test.mjs  publish-release-workflow.test.mjs  release-manifest.d.mts  release-manifest.mjs
(+29 files in other folders)
