[package]
name = "vocaport_native_shell"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
core_app_service = { path = "../../../crates/core_app_service" }
core_bridge_contract = { path = "../../../crates/core_bridge_contract" }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "vocaport_native_shell"
crate-type = ["staticlib", "cdylib", "rlib"]
