[package]
name = "importer_apkg"
version = "0.0.0"
edition = "2021"

[dependencies]
core_bridge_contract = { path = "../../core_bridge_contract" }
core_domain = { path = "../../core_domain" }
core_events = { path = "../../core_events" }
rusqlite = { version = "0.40", features = ["bundled", "serialize"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "js"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
